// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Main > should match snapshot - size l 1`] = `
<main
  class="nhsuk-main-wrapper nhsuk-main-wrapper--l"
  data-testid="main"
  role="main"
>
  What is your name?
</main>
`;

exports[`Main > should match snapshot - size s 1`] = `
<main
  class="nhsuk-main-wrapper nhsuk-main-wrapper--s"
  data-testid="main"
  role="main"
>
  What is your name?
</main>
`;

exports[`Main > should match snapshot - size undefined 1`] = `
<main
  class="nhsuk-main-wrapper"
  data-testid="main"
  role="main"
>
  What is your name?
</main>
`;

exports[`Main > should match snapshot 1`] = `
<main
  class="nhsuk-main-wrapper"
  data-testid="main"
  role="main"
>
  What is your name?
</main>
`;
